# Bobbycar-Steering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  setup.ps1
.github/hooks/: read-instructions-on-compact.json
.github/instructions/: index.instructions.md
.github/instructions/CODING/: COMMENTS.instructions.md  SCRIPTS.instructions.md
.github/instructions/DEBUG/: DEBUG_README.instructions.md
.github/instructions/HARDWARE/: HARDWARE.instructions.md
.github/instructions/documentation/: CHANGE_DOC.instructions.md  COMMIT.instructions.md  PROJECT_DOC.instructions.md  REQUIREMENTS_DOC.instructions.md  TEST_DOC.instructions.md  TODO_DOC.instructions.md
Documentation/: CHANGE_LOG.md  PINOUT_ESP32C3.md  PINOUT_ESP32C5.md  PINOUT_ESP32H2.md  PROJECT_DOC.md  connection.md  connection_st7796s.md
Documentation/Requirements/: requirements.md
Documentation/ToDo/: adc-display.md  ble-console-pm-config.md  blinky-task.md  bluetooth-gamepad.md  console-motors-steering.md
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
datasheets/: README.md
main/: CMakeLists.txt  ble_console.c  ble_console.h  bp32_config.c  bp32_config.h  console.c  console.h  console_cmds.c  console_cmds.h  console_cmds_fs.c  idf_component.yml  ini_parser.c  ini_parser.h  main.c  motor.c  motor.cpp  motor.h  my_platform.c  pin_config.h  power_mgmt.c  power_mgmt.h  steering_algo.c  steering_algo.cpp  steering_algo.h  storage.c  storage.h  xmodem.c  xmodem.h
